force-app/main/default/objects/Quote_Field_Update__mdt/Quote_Field_Update__mdt.object-meta.xml
<CustomObject>
    <label>Quote Field Update</label>
    <pluralLabel>Quote Fields Update</pluralLabel>
</CustomObject>