force-app/main/default/objects/Quote_Field_Update__mdt/fields/Duration_of_contract__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_contract__c</fullName>
    <label>Duration of contract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>