force-app/main/default/objects/Quote_Field_Update__mdt/fields/Excluded_Services__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Services__c</fullName>
    <label>Excluded Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>