force-app/main/default/objects/Quote_Field_Update__mdt/fields/Indemnity_Limitation_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Limitation_of_Liability__c</fullName>
    <label>Indemnity, Limitation of Liability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>