force-app/main/default/objects/Quote_Field_Update__mdt/fields/Quote_Recot_type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Recot_type__c</fullName>
    <label>Quote Recot type</label>
    <length>220</length>
    <type>Text</type>
</CustomField>