force-app/main/default/objects/Quote_Field_Update__mdt/fields/Scope_of_the_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_the_Service_Agreement__c</fullName>
    <label>Scope of the Service Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>