force-app/main/default/objects/Quote_Field_Update__mdt/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <label>Termination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>