force-app/main/default/objects/Quote_Field_Update__mdt/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>